# piGenCode

./: .gitignore  .pigencoderc  README.md  chkDiff_cmdpackage.sh  chkDiff_pi.sh  chkDiff_pi2.sh  cleanBuild.sh  debug_synccode.py  findReplace.py  his.txt  piGenClass_design.md  piSeed_Construction_Guide.md  pyproject.toml  requirements.txt  run_pigencode.py  syncCode_cli_enhancements.py  syncCode_diagnostics.py  syncCode_directory_fix.py  syncCode_fix.py  syncCode_improvements.py  syncCode_performance.py
piGerms/piStruct/: piStruct_piBase.json  piStruct_piProlog.json
piGerms/piValuesSetD/: piValuesSetD_piBase.json  piValuesSetD_piProlog.json
piSeeds/: piBaseStruct.pi  piSeed000_piStruct_piProlog.pi  piSeed001_piStruct_piBase.pi
src/defs/: .pidefs  utilities.py
src/pigencode/: __init__.py  main.py
src/pigencode/classes/: argParse.py  optSwitches.py  piGenClassCode.py  piGenCode.py  piGenDefCode.py  piGermSeeds.py  piSeedRegistry.py  piSeeds.py
src/pigencode/commands/: cmdOptSwitchbord.py  cmdSwitchbord.py  commands.json  commands.py  fileDiff.py  genCode.py  germSeed.py  modCmd.py  newCmd.py  reorderSeeds.py  rmCmd.py  rmGC.py  runClean.py  setDir.py  syncCode.py  syncCode_fixed.py  syncCode_original.py
src/pigencode/defs/: .pidefs  fileIO.py  getSeedPath.py  logIt.py  piDeepSeek.py  piGerminator.py  piID.py  piJsonFile.py  piRCFile.py
src/pigencode/piApi/: .piclass  .pidefs  piAPIModel.py  piAPIServer.py
testCode/cmdpackage/: main.py
testCode/cmdpackage/defs/: createzVirtualEnv.py  runSubProc.py  writeCLIPackage.py  writePyProject.py  writeSetup.py
(+36 files in other folders)
