[project]

name = "piGenCode"
version = "0.2.0"
description = "piGenCode pip package"
readme = ""
license = {text = "MIT License"}
authors = [
{name = "mpytel", email = "mpytel@domain.com"}
]
maintainers = [
{name = "mpytel", email = "mpytel@domain.com"}
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    ]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
[project.scripts]
piGenCode = "pigencode.main:main"
